# algotrading

./: AGENTS.md  API_ANALYSIS_REPORT.md  API_ANALYSIS_SUMMARY.txt  API_COMPLIANCE_CHECKLIST.md  API_FLOW_DIAGRAM.md  CLAUDE.md  DOCUMENTATION_INDEX.md  DYDX_DOCS_SUMMARY.txt  DYDX_DOC_CONCEPTS.md  DYDX_DOC_NODES.md  DYDX_OFFICIAL_DOCUMENTATION.md  DYDX_QUICK_REFERENCE.md  ENDPOINT_REFERENCE.md  MASTER-PLAN.md  MTF_ENTRY.txt  MTF_SETUP.txt  plan.md
.kilocode/workflows/: openspec-archive.md
.windsurf/workflows/: openspec-archive.md
app/: .env  GEMINI.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_OPENSPEC_PROPOSALS.md  PNL_CALCULATION_GUIDE.md  QUICK_START.md  README.md  TASK1_INTEGRATION_COMPLETE.md  TASK4_PNL_IMPLEMENTATION.md  TASK5_ERROR_HANDLING.md  TESTNET_MAINNET_GUIDE.md  WEBSOCKET_INTEGRATION_GUIDE.md  docker-compose.yml  init.sql  logs.txt
app/backend/: Dockerfile  alembic.ini  create_test_user.py  package.json  pyproject.toml  quick_setup.py  request_testnet_funds.py  requirements.txt  setup_webhook_user.py  test_faucet.py  verify_webhook_secret.py
app/backend/alembic/: env.py  script.py.mako
app/backend/alembic/versions/: 20251024_initial_migration.py  20251025_add_dydx_address_and_mnemonic.py  20251025_add_network_selection.py  20251025_add_testnet_mainnet_mnemonics.py  20251025_separate_network_mnemonics.py
app/backend/src/api/: auth.py  errors.py  trading.py  user.py  webhooks.py
app/backend/src/bot/: __init__.py  dydx_client.py  dydx_v4_orders.py  pnl_calculator.py  state_manager.py  trading_audit.py  trading_engine.py
app/backend/src/core/: logging_config.py  network_validator.py  resilience.py  security.py
app/backend/src/db/: database.py  migrate_add_side.py  models.py
app/backend/src/static/css/: input.css  output.css
app/backend/src/static/js/: auth.js  dashboard.js
app/backend/src/templates/: dashboard.html
app/backend/src/workers/: batch_processor.py  dydx_order_monitor.py  error_handler.py  monitoring_manager.py  notification_manager.py  position_closure_orchestrator.py  position_monitor.py  position_state_manager.py
app/backend/tests/: test_trading_audit.py
archive/: MTF_ENTRY.ps
dydx-api-manual/: DYDX_DOC.md  DYDX_DOC_API.md  DYDX_DOC_APPLICATION_INTEGRATION.md  DYDX_DOC_PERMISSIONED_KEYS.md  DYDX_DOC_TRADING_DATA.md
openspec/: project.md
openspec/changes/: background-position-monitoring.md  core-trading-engine.md  foundation-database-setup.md  secure-webhook-system.md  (+1 more)
src/: ALL_ROUTES.md  EQUITY_CURVE_STREAMLIT.md  INTEGRATION_COMPLETE.md  README.md  TASK2_WEBSOCKET_IMPLEMENTATION.md  TASK3_TRADING_AUDIT.md  tailwind.config.js
(+27 files in other folders)
