[tool.poetry]
name = "dydx-trading-service"
version = "0.1.0"
description = "dYdX Trading Service Backend"
authors = ["dydx-trading-service"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.5.2"
pydantic-settings = "2.1.0"
sqlmodel = "0.0.14"
asyncpg = "0.29.0"
alembic = "1.13.1"
aiosqlite = "0.19.0"
cryptography = "41.0.7"
python-dotenv = "1.0.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
PyJWT = "2.8.0"
dydx-v4-client = {version = "^1.1.5", extras = ["chain", "indexer"]}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
slowapi = "0.1.9"
web3 = {extras = ["py"], version = "6.11.1"}
eth-account = "0.10.0"
httpx = "0.27.0"
pydantic-extra-types = "2.3.0"
email-validator = "2.2.0"
structlog = "23.2.0"
dynaconf = "3.2.4"
python-dateutil = "2.8.2"
pytz = "2023.3"
numpy = "1.26.2"
websockets = "12.0"
celery = "5.3.4"
redis = "5.0.1"
Pillow = "10.1.0"
sentry-sdk = {extras = ["fastapi"], version = "1.38.0"}
typing-extensions = "4.12.2"
click = "8.1.7"
rich = "13.7.0"
jupyter = "1.0.0"
ipykernel = "6.26.0"
matplotlib = "3.8.2"
pandas = "2.1.4"

[tool.poetry.group.dev.dependencies]
black = "23.11.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.7.1"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
pre-commit = "3.5.0"
tox = "4.11.3"
mkdocs = "1.5.3"
mkdocs-material = "9.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto",
]